--- a/.env.example
+++ b/.env.example
@@ -1,46 +1,49 @@
 # Telegram Bot Configuration
 TELEGRAM_TOKEN=your_bot_token_here
 
+# Telegram Client API (Required for 2GB+ uploads)
+# Get from: https://my.telegram.org/apps
+API_ID=12345678
+API_HASH=0123456789abcdef0123456789abcdef
+
 # Database Configuration
-# For PostgreSQL:
-# DB_URL=postgresql+asyncpg://ytbot:password@localhost:5432/ytbot
-# For SQLite (default):
 DB_URL=sqlite+aiosqlite:///bot.db
+# For PostgreSQL: postgresql+asyncpg://user:pass@localhost:5432/ytbot
 DB_PASSWORD=changeme
 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
 
-# File Upload Limits (in MB)
-MAX_FILE_MB=50
-TELEGRAM_UPLOAD_LIMIT_MB=50
+# File Upload Limits (4GB via Pyrogram Client API)
+MAX_FILE_MB=4000
+TELEGRAM_UPLOAD_LIMIT_MB=4000
 
-# Rate Limiting
-MAX_CONCURRENT_DOWNLOADS=3
-RATE_LIMIT_PER_USER_PER_DAY=20
+# Download Settings
+MAX_CONCURRENT_DOWNLOADS=5
+RATE_LIMIT_PER_USER_PER_DAY=50
 
 # Admin Users (comma-separated Telegram user IDs)
+# Get your ID from @userinfobot
 ADMIN_USER_IDS=123456789,987654321
 
-# Storage Backend (local, gdrive, s3)
-STORAGE_BACKEND=local
+# Storage Backend (gdrive recommended)
+STORAGE_BACKEND=gdrive
 
-# Google Drive Configuration (if using gdrive)
-GDRIVE_CLIENT_ID=your_client_id
+# Google Drive Configuration (Optional but recommended)
+# Get from: https://console.cloud.google.com/
+GDRIVE_CLIENT_ID=your_client_id.apps.googleusercontent.com
 GDRIVE_CLIENT_SECRET=your_client_secret
 
-# AWS S3 Configuration (if using s3)
-S3_ENDPOINT=https://s3.amazonaws.com
-S3_BUCKET=your-bucket-name
-AWS_ACCESS_KEY_ID=your_access_key
-AWS_SECRET_ACCESS_KEY=your_secret_key
+# Google Drive Folder Name (auto-created)
+GDRIVE_FOLDER_NAME=YTDL
+
+# Performance Settings
+# Use all available bandwidth and CPU
+YT_DLP_CONCURRENT_FRAGMENTS=10
+HTTP_CHUNK_SIZE=10485760
 
 # Monitoring (optional)
-SENTRY_DSN=your_sentry_dsn
-
-# Webhook Mode (optional)
-WEBHOOK_URL=https://your-domain.com/webhook
-WEBHOOK_PORT=8443
+SENTRY_DSN=
 
 # Development Mode
 DEBUG=false
