--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,27 @@
 # Core dependencies
 aiogram==3.15.0
-yt-dlp>=2023.12.0
+yt-dlp>=2024.11.0
 redis>=5.0.0
 sqlalchemy>=2.0.0
 aiosqlite>=0.19.0
 aiofiles>=23.0.0
 
+# Pyrogram for large file uploads (2GB+)
+pyrogram>=2.0.106
+TgCrypto>=1.2.5
+
 # Database
 alembic>=1.12.0
 asyncpg>=0.29.0  # For PostgreSQL (optional)
 
-# Cloud storage
+# Google Drive Integration
 google-api-python-client>=2.100.0
 google-auth-httplib2>=0.1.1
 google-auth-oauthlib>=1.1.0
-boto3>=1.28.0  # For S3
+oauth2client>=4.1.3
+
+# AWS S3 (optional)
+boto3>=1.28.0
 
 # Media processing
 ffmpeg-python>=0.2.0
@@ -33,3 +40,7 @@ pytest>=7.4.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
 httpx>=0.25.0
+
+# Additional utilities
+requests>=2.31.0
+urllib3>=2.0.0
